<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="6"
    tools:context=".MainActivity">
    <TextView
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:scrollbars="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:id="@+id/text"
        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="false"
        />
    <Button
        android:id="@+id/jinzhi10"
        android:text="@string/jinzhi10"
        />
    <Button
        android:id="@+id/jinzhi2"
        android:text="@string/jinzhi2"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:text="@string/delete"
        android:id="@+id/delete"
        android:layout_gravity="fill_horizontal"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:layout_gravity="fill_horizontal"
            />
    <Button
        android:id="@+id/left"
        android:text="@string/left"
        />
    <Button
        android:id="@+id/right"
        android:text="@string/right"
        />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dian"
            android:textSize="15dp"
            android:id="@+id/dian"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/add"
                android:textSize="15dp"
                android:id="@+id/add"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button7"
                android:id="@+id/button7"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button8"
                android:id="@+id/button8"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button9"
                android:id="@+id/button9"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/jan"
                android:textSize="15dp"
                android:id="@+id/jan"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button4"
                android:id="@+id/button4"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button5"
                android:id="@+id/button5"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button6"
                android:id="@+id/button6"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/chen"
                android:textSize="15dp"
                android:id="@+id/chen"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button1"
                android:id="@+id/button1"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button2"
                android:id="@+id/button2"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button3"
                android:id="@+id/button3"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/chu"
                android:textSize="15dp"
                android:id="@+id/chu"
                />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_columnSpan="3"
                android:text="@string/button0"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/button0"
                />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/equal"
                android:id="@+id/equal"
                android:textSize="15dp"
                android:background="@color/red"
                />
        </GridLayout>


